cmake: updated added optional static linking and fix cmake error
Signed-off-by: amdazm05 <amdali1998@yahoo.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION 3.12...3.14)
 project(aarch64-asm-ex ASM)
-set(CMAKE_TOOLCHAIN_FILE ${PROJECT_SOURCE_DIR}/cmake/aarch64-cross.cmake)
+
+option(STATIC_LINK_OPT OFF)
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+include(aarch64-cross)
+crosscompiler("aarch64-linux-gnu-")
 add_subdirectory(${CMAKE_SOURCE_DIR}/examples)
